--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -3,7 +3,7 @@
     <h2 class="advantages__title section__title visually-hidden">advantages</h2>
     <ul class="advantages__list">
       <li class="advantages__item">
-        <picture class="advantages__pic">
+        <picture>
           <source
             srcset="images/advantages/l/icon_1.webp 1x, images/advantages/l/icon_1@2x.webp 2x"
             media="(min-width: 1280px)"
@@ -34,7 +34,7 @@
             media="(max-width: 767px)"
             type="image/png"
           />
-          <img src="images/advantages/s/icon_1.png" alt="picture about milk" />
+          <img src="images/advantages/s/icon_1.png" alt="picture about milk"  class="advantages__pic"/>
         </picture>
         <div class="advantages__calc"><span class="advantages__calc-num"> 720</span></div>
         <div class="advantages__descripton">
@@ -42,7 +42,7 @@
         </div>
       </li>
       <li class="advantages__item">
-        <picture class="advantages__pic">
+        <picture>
           <source
             srcset="images/advantages/l/icon_2.webp 1x, images/advantages/l/icon_2@2x.webp 2x"
             media="(min-width: 1280px)"
@@ -73,7 +73,7 @@
             media="(max-width: 767px)"
             type="image/png"
           />
-          <img src="images/advantages/s/icon_2.png" alt="picture" />
+          <img src="images/advantages/s/icon_2.png" alt="picture"  class="advantages__pic"/>
         </picture>
         <div class="advantages__calc"><span class="advantages__calc-num">14</span>kg</div>
         <div class="advantages__descripton">
@@ -81,7 +81,7 @@
         </div>
       </li>
       <li class="advantages__item">
-        <picture class="advantages__pic">
+        <picture>
           <source
             srcset="images/advantages/l/icon_3.webp 1x, images/advantages/l/icon_3@2x.webp 2x"
             media="(min-width: 1280px)"
@@ -112,7 +112,7 @@
             media="(max-width: 767px)"
             type="image/png"
           />
-          <img src="images/advantages/s/icon_3.png" alt="picture" />
+          <img src="images/advantages/s/icon_3.png" alt="picture"  class="advantages__pic" />
         </picture>
         <div class="advantages__calc"><span class="advantages__calc-num">84</span></div>
         <div class="advantages__descripton">
