--- a/src/partials/components/popap.html
+++ b/src/partials/components/popap.html
@@ -58,14 +58,14 @@
           placeholder=""
         />
         <label for="modal-form__check" class="modal-form__check-lable"
-          > <span class="modal-form__legaltxt"> Соглашаюсь с рассылкой и принимаю</span>
+          > <span class="modal-form__legaltxt"> I agree with the newsletter and accept</span>
          </label>
           <a class="modal-form__legal" href="#">
-            <span >Условия договора</span>
+            <span >Agreement</span>
           </a>
       </div>
       <button type="submit" class="red-button modal-form__centr">
-        <span class="modal-form__buttonname">Отправить</span>
+        <span class="modal-form__buttonname">SEND</span>
       </button>
     </form>
 
