--- a/src/sass/components/_advantages.scss
+++ b/src/sass/components/_advantages.scss
@@ -1,16 +1,34 @@
+.advantages.section {
+    @include section-class(20px, 40px);
+
+  @include mq(mobile) {
+    @include section-class(20px, 40px);
+  }
+  @include mq(tablet) {
+    @include section-class(40px, 40px);
+  }
+  @include mq(desktop) {
+    @include section-class(21px, 60px);
+  }
+}
 .advantages {
   background-color: $section-color;
   &__list {
     display: flex;
     flex-direction: column;
+     @include mq(mobile-only) {
+       padding-left:  5px;
+      padding-right: 5px;
+      }
     @include mq(tablet) {
       flex-direction: row;
+      padding-left:  17px;
+      padding-right: 17px;
     }
   }
 
   &__item {
     width: 230px;
-
     @include mq(tablet) {
       width: 180px;
     }
@@ -18,7 +36,7 @@
       width: 288px;
     }
     &:not(:last-child) {
-      @include mq(mobile) {
+      @include mq(mobile-only) {
         margin-bottom: 32px;
       }
       @include mq(tablet-only) {
@@ -29,12 +47,6 @@
       }
     }
   }
-
-  //   &__item:not(:last-child) {
-  //     @include mq(mobile) {
-  //       margin-bottom: 32px;
-  //     }
-  //   }
 
   &__pic {
     display: block;
