--- a/src/sass/components/_popap.scss
+++ b/src/sass/components/_popap.scss
@@ -87,6 +87,7 @@
   margin-bottom: 4px;
   font-size: 12px;
   line-height: 1.16em;
+  font-family: $font-primary;
   color: $color-font-second;
   /* identical to box height */
   letter-spacing: 0.01em;
@@ -185,19 +186,23 @@
 .modal-form__centr {
   margin-top: 10px;
 
+
   margin-left: auto;
   margin-right: auto;
 }
 
 .modal-form__buttonname {
+ 
   color: $color-font-white;
   font-size: 16px;
-  font-weight: 700;
-  font-family: $font-primary;
+  font-weight: 400;
+  font-family: $font-titel;
   line-height: 1.875;
+  // letter-spacing: 0.5em;
   /* identical to box height, or 187% */
-  align-items: center;
-  text-align: center;
+  // align-items: center;
+
+  // text-align: right;
 }
 
 .modal-container__closed {
