--- a/src/partials/components/modal-btn.html
+++ b/src/partials/components/modal-btn.html
@@ -1,9 +1,20 @@
 <section class="section  modaltest">
   <div class="section container flex-btn">
-    <button class="red-button js-open-modal" data-modal="1">modal 1</button>
-    <button class="red-button js-open-modal" data-modal="2">modal 2</button>
-    <button class="red-button js-open-modal" data-modal="5">modal 5</button>
-    <button class="red-button js-open-modal" data-modal="6">modal 6</button>
+    <p>Розібрався з модалками, як працює там JS
+    
+    Коротше кажучи, коли JS код бачить атрибут data-modal=“1”, він забирає з контексту цю одиничку (1) і шукає модальне
+    вікно з таким же атрибутом data-modal=“1”.
+    
+    Коду всерівно чи там є 1 чи слово ice-cream, головне, щоб значення data-modal співпадали як на кнопці, так і на div
+    модалки.
+    
+    Кожен може дати data-modal свою унікальну назву, до прикладу у мене data-modal=“about-modal”, яку задати однаково на
+    кнопку і на модалку своєї секції.</p>
+    <p>(message form Rostyslav)</p>
+    <button class="about__button button--red js-open-modal" data-modal="1">modal 1</button>
+    <button class="about__button button--white js-open-modal" data-modal="2">modal 2</button>
+    <button class="about__button button--red js-open-modal" data-modal="5">modal 5</button>
+    <button class="about__button button--white js-open-modal" data-modal="6">modal 6</button>
 
     <a href="#" class="js-open-modal" data-modal="3">Открыть окно 3</a>
   </div>
