--- a/src/partials/customer_reviews.html
+++ b/src/partials/customer_reviews.html
@@ -1,7 +1,7 @@
 
     <section class="section customer" id="customer">
-        <div class="customer__container">
-            <h2 hidden>slider customer hidden</h2>
+        <div class="container">
+            <h2 customer__title visually-hidden>slider customer hidden</h2>
             <img class="customer__photos" src="/images/customer_reviews/slm/card1_result.webp" alt="customer">
         
             <div class="customer__blockquote">
@@ -46,3 +46,4 @@
           </li>
       </ul>
         </section> 
+   
