--- a/src/partials/customer_reviews.html
+++ b/src/partials/customer_reviews.html
@@ -2,6 +2,13 @@
     <section class="section customer" id="customer">
         <div class="container">
             <h2 customer__title visually-hidden>slider customer hidden</h2>
+            <div class="customer__slick">
+            <div class="single-item">
+              <div class="slick-img" style="background-image:url(/images/customer_reviews/slm/card1_result.webp);"></div>
+              <div class="slick-img" style="background-image:url(/images/customer_reviews/slm/card2_result.webp);"></div>
+              <div class="slick-img" style="background-image:url(/images/customer_reviews/slm/card3_result.webp);"></div>
+            </div>
+          </div>
             <img class="customer__photos" src="/images/customer_reviews/slm/card1_result.webp" alt="customer">
         
             <div class="customer__blockquote">
