Добавляє кінцеві зміни

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -92,17 +92,17 @@
       <li class="group__item">
         <button class="group__btn group__btn--red" type="button">
           Our Locations
-          <!-- <svg>
-            <use href=""></use>
-          </svg> -->
+          <svg class="group__icon">
+            <use href="./images/icons.svg#icon-red-button"></use>
+          </svg>
         </button>
       </li>
       <li class="group__item">
         <button class="group__btn group__btn--white" type="button">
           Franchise
-          <!-- <svg>
-            <use href=""></use>
-          </svg> -->
+          <svg class="group__icon">
+            <use href="./images/icons.svg#icon-white-button"></use>
+          </svg>
         </button>
       </li>
     </ul>
