--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -287,7 +287,15 @@
     background-color: $white-btn-bgc--active;
   }
 }
+.group__icon {
+  margin-left: 8px;
+  width: 7px;
+  height: 10px;
 
+  @media screen and (min-width: 768px) {
+    margin-left: 14px;
+  }
+}
 @media screen and (min-width: 768px) {
   .group__btn--red {
     margin: 0;
