--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,16 +1,15 @@
-<section class="header">
+<section class="header section">
     <div class="container">
-
-        <nav class="nav-header">
-            <div class="header-logo"> <a class="header-logo" href="/index.html">
-                    <img class="logo" src="/images/header/logo.png" alt="logo" width="199px">
-                </a></div>
+<div class="header-logo"> <a class="header-logo" href="/index.html">
+        <img class="logo" src="/images/header/logo.png" alt="logo" width="199px">
+    </a></div>
+        <nav class="nav-header">         
             <ul class="header-nav">
-                <li class="header-nav__items"><a class="header-nav__links" href="">Home</a></li>
-                <li class="header-nav__items"><a class="header-nav__links" href="">About us</a></li>
-                <li class="header-nav__items"><a class="header-nav__links" href="">How it’s made?</a></li>
-                <li class="header-nav__items"><a class="header-nav__links" href="">Our products</a></li>
-                <li class="header-nav__items"><a class="header-nav__links" href="">Contact</a></li>
+                <li class="header-nav__items"><a class="header-nav__links" href="#">Home</a></li>
+                <li class="header-nav__items"><a class="header-nav__links" href="#">About us</a></li>
+                <li class="header-nav__items"><a class="header-nav__links" href="#">How it’s made?</a></li>
+                <li class="header-nav__items"><a class="header-nav__links" href="#products">Our products</a></li>
+                <li class="header-nav__items"><a class="header-nav__links" href="#">Contact</a></li>
             </ul>
             <button class="button-menu" data-menu-button type="button" aria-expanded="false">
                 <svg class="button-menu-icon">
@@ -28,7 +27,7 @@
                     <li class="mobile__item"><a class="mobile__links" href="">Home</a></li>
                     <li class="mobile__item"><a class="mobile__links" href="">About us</a></li>
                     <li class="mobile__item"><a class="mobile__links" href="">How it’s made?</a></li>
-                    <li class="mobile__item"><a class="mobile__links" href="">Our products</a></li>
+                    <li class="mobile__item"><a class="mobile__links" href="#products">Our products</a></li>
                     <li class="mobile__item"><a class="mobile__links" href="">Contact</a></li>
                 </ul>
             </div>
