--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,39 +1,141 @@
-@media screen and(min-width:320px) and(max-width:767px) {
+// @media screen and(min-width:320px) and(max-width:767px) {
 
     // .container {
     //         width: 480px;
     //         padding: 0 15px;
     //         margin: 0 auto;
     //     }
+
+
+
+.header.section {
+ @include section-class(20px, 40px);
+    
+@include mq(mobile) {
+@include section-class(20px, 40px);
+ }
+    
+ @include mq(tablet) {
+@include section-class(40px, 40px);
+}
+    
+ @include mq(desktop) {
+ @include section-class(21px, 60px);
+ }
+ }
+ .header.section .container{
+     display: flex;
+     align-items: center;
+    @include mq(tablet) {           
+            padding-left: 12px;
+            padding-right: 12px;
+            
+        }
+ }
+  .header  {     
+      left: 0;
+      right: 0;
+      position: absolute;
+      z-index: 10;
+      background-color: transparent;
+    //   padding-top: 18px;
+    @include mq(tablet){
+        padding: 32px;
+        // left: 0;
+        // right: 0;
+    }
+        @include mq(desktop){
+            left: 0;
+            right: 0;
+        }
+  }
+
+  .header-logo {
+      // margin-right: 175px;
+      width: 199px;
+
+  }
     .header-nav {
         display: none;
+        @include mq(desktop) {           
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;          
+                }      
     }
-
+@include mq(desktop){
+    .header-nav__items:not(:last-child) {
+    
+            margin-right: 35px;
+        }
+    
+        .header-nav__links {
+            display: block;
+            white-space: nowrap;
+            padding-top: 52px;
+            padding-bottom: 52px;
+            font-family: 'DM Sans';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 16px;
+            line-height: 1.3;
+            color: #FFFFFF;
+    
+            &:hover,
+            &:focus {
+                color: #D41443;
+    
+            }
+        }
+}
     .header__button {
         display: none;
-    }
+        @include mq(tablet) {
+            display: block;
+                justify-content: center;
+                align-items: center;
+                padding: 12px 41px 11px 37px;
+                text-align: center;
+                background-color: #FFFFFF;
+                border-radius: 22px;
+                margin-left: 32px ;
+                font-family: 'DM Sans';
+                font-style: normal;
+                font-weight: 700;
+                font-size: 16px;
+                line-height: 1.3;
+                &:hover,
+                &:focus {
+                    background-color: #ECEBEB;
+                    color: #D41443;            
+                }
+               }
+                 @include mq(desktop){
+                     margin-left: 174px;
+                    
+                 }
+               }
+     .header__svg {
+        width: 6px;
+        height: 10px;
+        margin-left: 12px;
+               }
 
     .nav-header {
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-left: auto;
+        margin-left: 175px;
+        @include mq(tablet){
+            margin-left: auto;
+        }
     }
 
-    .header {
-
-        background-color: #FFB8CA;
-        padding-top: 18px;
-    }
-
-    .header-logo {
-        margin-right: 175px;
-        width: 199px;
-
-    }
+   
 
     .button-menu {
         position: relative;
+        // left: -50%;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -42,6 +144,9 @@
         background-color: transparent;
         border: none;
         z-index: 11;
+        @include mq(desktop){
+            display: none;
+        }
     }
 
     .button-menu-icon {
@@ -53,6 +158,9 @@
     .icon-open {
         fill: #D41443;
         opacity: 1;
+        @include mq(desktop) {
+                display: none;
+            }
     }
 
     .icon-cloze {
@@ -60,7 +168,13 @@
         height: 14px;
         opacity: 0;
         fill: #FFFFFF;
+        @include mq(desktop) {
+                display: none;
+            }
     }
+        .button-menu.is-active{
+            position: fixed;
+        }
  .button-menu.is-active .icon-cloze {
      opacity: 1;
 
@@ -69,10 +183,6 @@
     opacity: 0;
     
 }
-
-
-
-
 .mobile-button {
         margin-top: 60px;
         margin-bottom: 19px;
@@ -97,15 +207,15 @@
             color: #D41443;
             ;
         }
+                @include mq(desktop) {
+                    display: none;
+                }
     }
 
-    .header__svg {
-        width: 4px;
-        height: 8px;
-        margin-left: 13px;
-    }
+   
 
     .mobile-menu {
+        z-index: 11;
         position: fixed;
         top: 0;
         left: 0;
@@ -115,15 +225,24 @@
         z-index: 10;
         width: 100%;
         opacity: 0;
-        transform: translateX(100%);
-
+        transform: scale(0);
+        transition: 450ms cubic-bezier(0.075, 0.82, 0.165, 1);
+        // transform: translateX(100%);
+        
+      @include mq(desktop) {
+        display: none;
+    }
     }
 
     .mobile-menu.is-open {
         opacity: 1;
-        transform: translateX(0);
-    }
-
+        // transform: translateX(0); 
+        transform: scale(1);
+    @include mq(desktop) {
+                display: none;
+            
+        }}
+  
     .mobile__links {
         font-family: 'DM Sans';
         font-style: normal;
@@ -131,18 +250,21 @@
         font-size: 14px;
         line-height: 1.3;
         color: #FFFFFF;
-        padding-top: 12px;
-        padding-bottom: 12px;
+        // padding-top: 12px;
+        // padding-bottom: 12px;
         border-bottom: 1px solid #E18298;
         display: block;
+
 
         &:focus {
             color: #D41443;
 
         }
+                @include mq(desktop) {
+                    display: none;
+                }
 
     }
-
 
     .mobile__item {
         margin-left: 20px;
@@ -150,329 +272,331 @@
         &:last-child {
             margin-bottom: 165px;
         }
+                @include mq(desktop) {
+                    display: none;
+                }
     }
 
     .mobile__item:not(:last-child) {
         margin-bottom: 22px;
-
-    }
-
-
-
-}
-
-@media screen and(min-width:768px) {
-    .header .container {
-        position: fixed;
-        left: 0;
-        right: 0;
-        z-index: 10;
-        width: 768px;
-        padding: 0 15px;
-        margin: 0 auto;
-        padding-top: 32px;
-    }
-
-    .header {
-        background-color: #FFB8CA;
-        
-    }
-
-    .header-nav {
+@include mq(desktop) {
         display: none;
     }
+    }
 
-    .nav-header {
-        width: 100%;
-        display: flex;
+
+// @media screen and(min-width:768px) {
+//     .header .container {
+//         position: fixed;
+//         left: 0;
+//         right: 0;
+//         z-index: 10;
+//         width: 768px;
+//         padding: 0 15px;
+//         margin: 0 auto;
+//         padding-top: 32px;
+//     }
+
+//     .header {
+//         background-color: #FFB8CA;
         
-        align-items: center;
+//     }
 
-    }
+//     .header-nav {
+//         display: none;
+//     }
 
-    .header-logo {
-        margin-right: 175px;
-        width: 199px;
-    }
+//     .nav-header {
+//         width: 100%;
+//         display: flex;
+        
+//         align-items: center;
+
+//     }
+
+//     .header-logo {
+//         margin-right: 175px;
+//         width: 199px;
+//     }
 
 
 
 
 
-    .header-nav__links {
-        display: block;
-        white-space: nowrap;
-        padding-top: 52px;
-        padding-bottom: 52px;
-        font-family: 'DM Sans';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 1.3;
-        color: #FFFFFF;
+//     .header-nav__links {
+//         display: block;
+//         white-space: nowrap;
+//         padding-top: 52px;
+//         padding-bottom: 52px;
+//         font-family: 'DM Sans';
+//         font-style: normal;
+//         font-weight: 700;
+//         font-size: 16px;
+//         line-height: 1.3;
+//         color: #FFFFFF;
 
-        &:hover,
-        &:focus {
-            color: #D41443;
-            ;
-        }
-    }
+//         &:hover,
+//         &:focus {
+//             color: #D41443;
+//             ;
+//         }
+//     }
 
-    .header__button {
-        display: block;
-        justify-content: center;
-        align-items: center;
-        padding: 12px 37px 11px 37px;
+//     .header__button {
+//         display: block;
+//         justify-content: center;
+//         align-items: center;
+//         padding: 12px 37px 11px 37px;
 
-        text-align: center;
-        background-color: #FFFFFF;
-        border-radius: 22px;
-        // margin-left: auto;
-        font-family: 'DM Sans';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 1.3;
+//         text-align: center;
+//         background-color: #FFFFFF;
+//         border-radius: 22px;
+//         // margin-left: auto;
+//         font-family: 'DM Sans';
+//         font-style: normal;
+//         font-weight: 700;
+//         font-size: 16px;
+//         line-height: 1.3;
 
-        &:hover,
-        &:focus {
-            background-color: #ECEBEB;
-            color: #D41443;
+//         &:hover,
+//         &:focus {
+//             background-color: #ECEBEB;
+//             color: #D41443;
             
-        }
-    }
+//         }
+//     }
 
-    .header__svg {
-        width: 4px;
-        height: 8px;
-        margin-left: 13px;
-    }
+//     .header__svg {
+//         width: 4px;
+//         height: 8px;
+//         margin-left: 13px;
+//     }
 
-   .button-menu {
-    //    position: absolute;
-       display: flex;
-       justify-content: center;
-       align-items: center;
-       width: 30px;
-       height: 30px;
-       background-color: transparent;
-       border: none;
-       z-index: 11;
-       margin-left: auto;
-       margin-right: 32px;
-   }
+//    .button-menu {
+//     //    position: absolute;
+//        display: flex;
+//        justify-content: center;
+//        align-items: center;
+//        width: 30px;
+//        height: 30px;
+//        background-color: transparent;
+//        border: none;
+//        z-index: 11;
+//        margin-left: auto;
+//        margin-right: 32px;
+//    }
 
-    .button-menu-icon {
-        width: 30px;
-        height: 30px;
-        display: flex;
-    }
+//     .button-menu-icon {
+//         width: 30px;
+//         height: 30px;
+//         display: flex;
+//     }
 
-    .icon-open {
-        fill: #D41443;
-        opacity: 1;
-    }
+//     .icon-open {
+//         fill: #D41443;
+//         opacity: 1;
+//     }
 
-    .icon-cloze {
-        width: 14px;
-        height: 14px;
-        opacity: 0;
-        fill: #FFFFFF;
-    }
-.button-menu.is-active .icon-cloze {
-    opacity: 1;
+//     .icon-cloze {
+//         width: 14px;
+//         height: 14px;
+//         opacity: 0;
+//         fill: #FFFFFF;
+//     }
+// .button-menu.is-active .icon-cloze {
+//     opacity: 1;
 
-}
+// }
 
-.button-menu.is-active .icon-open {
-    opacity: 0;
+// .button-menu.is-active .icon-open {
+//     opacity: 0;
 
-}
-    .mobile-button {
-        margin-top: 60px;
-        margin-bottom: 19px;
-        display: block;
-        justify-content: center;
-        align-items: center;
-        padding: 12px 37px 11px 37px;
-        margin-right: auto;
-        text-align: center;
-        background-color: #FFFFFF;
-        border-radius: 22px;
-        margin-left: 20px;
-        font-family: 'DM Sans';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 1.3;
+// }
+//     .mobile-button {
+//         margin-top: 60px;
+//         margin-bottom: 19px;
+//         display: block;
+//         justify-content: center;
+//         align-items: center;
+//         padding: 12px 37px 11px 37px;
+//         margin-right: auto;
+//         text-align: center;
+//         background-color: #FFFFFF;
+//         border-radius: 22px;
+//         margin-left: 20px;
+//         font-family: 'DM Sans';
+//         font-style: normal;
+//         font-weight: 700;
+//         font-size: 16px;
+//         line-height: 1.3;
 
 
-        &:focus {
-            background-color: #ECEBEB;
-            color: #D41443;
-            ;
-        }
-    }
+//         &:focus {
+//             background-color: #ECEBEB;
+//             color: #D41443;
+//             ;
+//         }
+//     }
 
-    .header__svg {
-        width: 4px;
-        height: 8px;
-        margin-left: 13px;
-    }
+//     .header__svg {
+//         width: 4px;
+//         height: 8px;
+//         margin-left: 13px;
+//     }
 
-   .mobile-menu {
-       position: absolute;
-       top: 0;
-       right: 0;
-       display: flex;
-       flex-direction: column;
-       background: #E17992;
-       z-index: 10;
-       width: 100%;
-       opacity: 0;
-       transform: translateX(100%);
-   }
+//    .mobile-menu {
+//        position: absolute;
+//        top: 0;
+//        right: 0;
+//        display: flex;
+//        flex-direction: column;
+//        background: #E17992;
+//        z-index: 10;
+//        width: 100%;
+//        opacity: 0;
+//        transform: translateX(100%);
+//    }
 
-   .mobile-menu.is-open {
-       opacity: 1;
-       transform: translateX(0%);
+//    .mobile-menu.is-open {
+//        opacity: 1;
+//        transform: translateX(0%);
        
-   }
+//    }
 
-    .mobile__links {
-        font-family: 'DM Sans';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 14px;
-        line-height: 1.3;
-        color: #FFFFFF;
-        padding-top: 12px;
-        padding-bottom: 12px;
-        border-bottom: 1px solid #E18298;
-        display: block;
+//     .mobile__links {
+//         font-family: 'DM Sans';
+//         font-style: normal;
+//         font-weight: 700;
+//         font-size: 14px;
+//         line-height: 1.3;
+//         color: #FFFFFF;
+//         padding-top: 12px;
+//         padding-bottom: 12px;
+//         border-bottom: 1px solid #E18298;
+//         display: block;
 
-        &:focus {
-            color: #D41443;
+//         &:focus {
+//             color: #D41443;
 
-        }
+//         }
 
-    }
-
-
-    .mobile__item {
-        margin-left: 20px;
-
-        &:last-child {
-            margin-bottom: 165px;
-        }
-    }
-
-    .mobile__item:not(:last-child) {
-        margin-bottom: 22px;
-
-    }
+//     }
 
 
-}
+//     .mobile__item {
+//         margin-left: 20px;
+
+//         &:last-child {
+//             margin-bottom: 165px;
+//         }
+//     }
+
+//     .mobile__item:not(:last-child) {
+//         margin-bottom: 22px;
+
+//     }
 
 
+// }
 
 
 
-@media screen and(min-width:1200px) {
-.header .container {
-        position: absolute;
-        left: 0;
-        right: 0;
-        width: 1200px;
-        padding: 0 15px;
-        margin: 0 auto;
-        z-index: 9;
-    }
-    .header {
 
-        background-color: #FFB8CA;
-        padding-top: 37px;
-    }
 
-    .nav-header {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
+// @media screen and(min-width:1200px) {
+// .header .container {
+//         position: absolute;
+//         left: 0;
+//         right: 0;
+//         width: 1200px;
+//         padding: 0 15px;
+//         margin: 0 auto;
+//         z-index: 9;
+//     }
+//     .header {
 
-    .header-logo {
-        margin-right: 175px;
-        width: 199px;
-    }
+//         background-color: #FFB8CA;
+//         padding-top: 37px;
+//     }
 
-    .header-nav {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+//     .nav-header {
+//         display: flex;
+//         justify-content: center;
+//         align-items: center;
+//     }
 
-    }
+//     .header-logo {
+//         margin-right: 175px;
+//         width: 199px;
+//     }
 
-    .header-nav__items:not(:last-child) {
+//     .header-nav {
+//         display: flex;
+//         justify-content: center;
+//         align-items: center;
 
-        margin-right: 35px;
-    }
+//     }
 
-    .header-nav__links {
-        display: block;
-        white-space: nowrap;
-        padding-top: 52px;
-        padding-bottom: 52px;
-        font-family: 'DM Sans';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 1.3;
-        color: #FFFFFF;
+//     .header-nav__items:not(:last-child) {
 
-        &:hover,
-        &:focus {
-            color: #D41443;
+//         margin-right: 35px;
+//     }
+
+//     .header-nav__links {
+//         display: block;
+//         white-space: nowrap;
+//         padding-top: 52px;
+//         padding-bottom: 52px;
+//         font-family: 'DM Sans';
+//         font-style: normal;
+//         font-weight: 700;
+//         font-size: 16px;
+//         line-height: 1.3;
+//         color: #FFFFFF;
+
+//         &:hover,
+//         &:focus {
+//             color: #D41443;
             
-        }
-    }
+//         }
+//     }
 
-    .header__button {
-        display: block;
-        justify-content: center;
-        align-items: center;
-        padding: 12px 37px 11px 37px;
+//     .header__button {
+//         display: block;
+//         justify-content: center;
+//         align-items: center;
+//         padding: 12px 37px 11px 37px;
 
-        text-align: center;
-        background-color: #FFFFFF;
-        border-radius: 22px;
-        margin-left: auto;
-        font-family: 'DM Sans';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 1.3;
+//         text-align: center;
+//         background-color: #FFFFFF;
+//         border-radius: 22px;
+//         margin-left: auto;
+//         font-family: 'DM Sans';
+//         font-style: normal;
+//         font-weight: 700;
+//         font-size: 16px;
+//         line-height: 1.3;
 
-        &:hover,
-        &:focus {
-            background-color: #ECEBEB;
-            color: #D41443;
+//         &:hover,
+//         &:focus {
+//             background-color: #ECEBEB;
+//             color: #D41443;
             
-        }
-    }
+//         }
+//     }
 
-    .header__svg {
-        width: 4px;
-        height: 8px;
-        margin-left: 13px;
-    }
+//     .header__svg {
+//         width: 4px;
+//         height: 8px;
+//         margin-left: 13px;
+//     }
 
-    .button-menu {
-        display: none;
-    }
+//     .button-menu {
+//         display: none;
+//     }
 
-    .mobile-menu {
-        display: none;
-    }
+//     .mobile-menu {
+//         display: none;
+//     }
     
-}
+// }
