--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,12 +1,3 @@
-// @media screen and(min-width:320px) and(max-width:767px) {
-
-    // .container {
-    //         width: 480px;
-    //         padding: 0 15px;
-    //         margin: 0 auto;
-    //     }
-
-
 
 .header.section {
  @include section-class(20px, 40px);
@@ -44,32 +35,32 @@
         // left: 0;
         // right: 0;
     }
-        @include mq(desktop){
+     @include mq(desktop){
             left: 0;
             right: 0;
         }
   }
 
   .header-logo {
-      // margin-right: 175px;
+      
       width: 199px;
 
   }
-    .header-nav {
+  .header-nav {
         display: none;
-        @include mq(desktop) {           
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;          
+    @include mq(desktop) {           
+                display: flex;
+                justify-content: center;
+                align-items: center;          
                 }      
     }
 @include mq(desktop){
     .header-nav__items:not(:last-child) {
     
-            margin-right: 35px;
+                margin-right: 35px;
         }
     
-        .header-nav__links {
+    .header-nav__links {
             display: block;
             white-space: nowrap;
             padding-top: 52px;
@@ -80,7 +71,7 @@
             font-size: 16px;
             line-height: 1.3;
             color: #FFFFFF;
-    
+    transition: color  250ms $functional-cubic;
             &:hover,
             &:focus {
                 color: #D41443;
@@ -110,24 +101,24 @@
                     color: #D41443;            
                 }
                }
-                 @include mq(desktop){
-                     margin-left: 174px;
+            @include mq(desktop){
+                margin-left: 174px;
                     
                  }
                }
-     .header__svg {
-        width: 6px;
-        height: 10px;
-        margin-left: 12px;
+        .header__svg {
+                width: 6px;
+                height: 10px;
+                margin-left: 12px;
                }
 
-    .nav-header {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-left: 175px;
+        .nav-header {
+                 display: flex;
+                 justify-content: center;
+                 align-items: center;
+                 margin-left: 175px;
         @include mq(tablet){
-            margin-left: auto;
+                  margin-left: auto;
         }
     }
 
@@ -174,6 +165,7 @@
     }
         .button-menu.is-active{
             position: fixed;
+            left: 50%;
         }
  .button-menu.is-active .icon-cloze {
      opacity: 1;
@@ -226,7 +218,7 @@
         width: 100%;
         opacity: 0;
         transform: scale(0);
-        transition: 450ms cubic-bezier(0.075, 0.82, 0.165, 1);
+        transition: 450ms $functional-cubic;
         // transform: translateX(100%);
         
       @include mq(desktop) {
@@ -250,27 +242,28 @@
         font-size: 14px;
         line-height: 1.3;
         color: #FFFFFF;
-        // padding-top: 12px;
-        // padding-bottom: 12px;
-        border-bottom: 1px solid #E18298;
+        padding-top: 12px;
+        padding-bottom: 12px;
+        // border-bottom: 1px solid #E18298;
         display: block;
-
-
         &:focus {
-            color: #D41443;
-
+        color: #D41443;
         }
-                @include mq(desktop) {
-                    display: none;
+        
+        @include mq(desktop) {
+        display: none;
                 }
-
     }
-
+// .mobile__links:first-child{
+//     border-top: 1px solid #E18298 ;
+// }
     .mobile__item {
         margin-left: 20px;
+        border-top: 1px solid #E18298;
 
         &:last-child {
             margin-bottom: 165px;
+            border-bottom: 1px solid #E18298;
         }
                 @include mq(desktop) {
                     display: none;
@@ -278,7 +271,7 @@
     }
 
     .mobile__item:not(:last-child) {
-        margin-bottom: 22px;
+        // margin-bottom: 22px;
 @include mq(desktop) {
         display: none;
     }
