--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,15 +1,31 @@
 <section class="header section">
     <div class="container">
 <div class="header-logo"> <a class="header-logo" href="/index.html">
-        <img class="logo" src="/images/header/logo.png" alt="logo" width="199px">
+        <picture>
+            <source 
+            srcset="images/header/logos_1.webp 1x, images/header/logos_1@2x.webp 2x" alt="logo"
+                media="(min-width: 1280px)" type="image/webp" />
+            <source 
+            rcset="images/header/logos_1.png 1x, images/header/logos_1@2x.png 2x" alt="logo"
+                media="(min-width: 1280px)" type="image/jpeg" />
+                    <source srcset="images/header/logos_1.webp 1x, images/header/logos_1@2x.webp 2x" alt="logo" media="(min-width: 767px)"
+                        type="image/webp" />
+                    <source rcset="images/header/logos_1.png 1x, images/header/logos_1@2x.png 2x" alt="logo" media="(min-width: 767px)"
+                        type="image/jpeg" />
+                            <source srcset="images/header/logos_1.webp 1x, images/header/logos_1@2x.webp 2x" alt="logo" media="(max-width: 768px)"
+                                type="image/webp" />
+                            <source rcset="images/header/logos_1.png 1x, images/header/logos_1@2x.png 2x" alt="logo" media="(max-width: 768px)"
+                                type="image/jpeg" />
+                                <img src="images/header/logos_1.png" alt="picture" />
+        </picture><span class="logo-text">ICECREAM</span>
     </a></div>
         <nav class="nav-header">         
             <ul class="header-nav">
-                <li class="header-nav__items"><a class="header-nav__links" href="#">Home</a></li>
-                <li class="header-nav__items"><a class="header-nav__links" href="#">About us</a></li>
-                <li class="header-nav__items"><a class="header-nav__links" href="#">How it’s made?</a></li>
+                <li class="header-nav__items"><a class="header-nav__links" href="#hero">Home</a></li>
+                <li class="header-nav__items"><a class="header-nav__links" href="#about">About us</a></li>
+                <li class="header-nav__items"><a class="header-nav__links" href="#advantages">How it’s made?</a></li>
                 <li class="header-nav__items"><a class="header-nav__links" href="#products">Our products</a></li>
-                <li class="header-nav__items"><a class="header-nav__links" href="#">Contact</a></li>
+                <li class="header-nav__items"><a class="header-nav__links" href="#contacts">Contact</a></li>
             </ul>
                     
         </nav>
@@ -32,11 +48,11 @@
             </svg>
         </button>
         <ul class="mobile-nav">
-            <li class="mobile__item"><a class="mobile__links" href="">Home</a></li>
-            <li class="mobile__item"><a class="mobile__links" href="">About us</a></li>
-            <li class="mobile__item"><a class="mobile__links" href="">How it’s made?</a></li>
+            <li class="mobile__item"><a class="mobile__links" href="#hero">Home</a></li>
+            <li class="mobile__item"><a class="mobile__links" href="#about">About us</a></li>
+            <li class="mobile__item"><a class="mobile__links" href="#advantages">How it’s made?</a></li>
             <li class="mobile__item"><a class="mobile__links" href="#products">Our products</a></li>
-            <li class="mobile__item"><a class="mobile__links" href="">Contact</a></li>
+            <li class="mobile__item"><a class="mobile__links" href="#contacts">Contact</a></li>
         </ul>
     </div>
 
