herro edit. min width

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -127,7 +127,7 @@
                  display: flex;
                  justify-content: center;
                  align-items: center;
-                 margin-left: 175px;
+                 margin-left: auto;
         @include mq(tablet){
                   margin-left: auto;
         }
