--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -5,7 +5,7 @@
             how it’s made?
         </h2>
         <div class="about__content">
-                    <picture class="about__image">
+                    <picture>
                         <source srcset="
                                                     images/about/l/milk.webp    1x,
                                                     images/about/l/milk@2x.webp 2x
@@ -28,7 +28,7 @@
                                                   " media="(max-width: 767px)" type="image/webp" />
                         <source srcset="images/about/s/milk@2x.png 2x" media="(max-width: 767px)" type="image/png" />
                     
-                        <img src="images/about/s/milk.png" alt="Cow and bottle of milk" width="418" height="360" />
+                        <img  class="about__image" src="images/about/s/milk.png" alt="Cow and bottle of milk" />
                     </picture>
                     
                     <div class="about__textContent">
