--- a/src/sass/basis/_reset.scss
+++ b/src/sass/basis/_reset.scss
@@ -3,7 +3,7 @@ html{
 }
 body {
 //   background-color: var(--bcg-main);
-//   font-family: var(--font-primary), var(--font-primary-rezerv);
+  font-family: $font-primary,$font-primary-rezerv ;
   font-style: normal;
   font-weight: 400;
 }
