one more time commit

--- a/src/partials/customer_reviews.html
+++ b/src/partials/customer_reviews.html
@@ -5,10 +5,12 @@
           <img class="customer__photos" src="/images/customer_reviews/slm/card1_result.webp" alt="customer">
       
           <div class="customer__blockquote">
-              <svg class="customer__svg" width="50" height="40">
+            <div class="customer__svg">
+              <!-- <svg class="customer__svg" width="50" height="40">
                 <use href="/images/customer_reviews/slm/blockquote.svg">
                 </use>  
-              </svg>
+              </svg> -->
+            </div>
            <p class="customer__text">
               Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
            </p>
