--- a/src/sass/components/_customer_reviews.scss
+++ b/src/sass/components/_customer_reviews.scss
@@ -61,6 +61,8 @@ margin-bottom: 16px;
   }
 
 .customer__svg{
+  background-image:url(/images/customer_reviews/slm/blockquote.svg);
+  background-repeat: no-repeat;
   position: absolute;
   width: 60px;
   height: 40px;
