bugfix/fix-error

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -14,12 +14,17 @@
 
     <ul class="counters">
       <li class="counters__item">
-        <p class="counters__count"><span class="calc-num">16</span></p>
-        <p class="counters__name">cafes</p>
+        <p class="counters__count">
+          <span class="calc-num">16</span>
+          <span class="counters__name">cafes</span>
+        </p>
+        
       </li>
       <li class="counters__item">
-        <p class="counters__count">23</p>
-        <p class="counters__name">food trucks</p>
+        <p class="counters__count">
+          <span class="calc-num">23</span>
+          <span class="counters__name">food trucks</span>
+      </p>
       </li>
     </ul>
 
@@ -28,7 +33,7 @@
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
         labore et
       </p>
-      <button class="btn promo__btn">
+      <button class="btn promo__btn js-open-modal" data-modal="5" aria-label="get promo code">
         <svg class="promo__icon">
           <use href="./images/icons.svg#arrow-right"></use>
         </svg>
@@ -38,37 +43,31 @@
     <picture>
       <source
         srcset="images/hero/l/ice-creame.webp 1x, images/hero/l/ice-creame@2x.webp 2x"
-        alt="ICEREAME"
         media="(min-width: 1280px)"
         type="image/webp"
       />
       <source
         srcset="images/hero/l/ice-creame.png 1x, images/hero/l/ice-creame@2x.png 2x"
-        alt="ICEREAME"
         media="(min-width: 1280px)"
         type="image/jpeg"
       />
       <source
         srcset="images/hero/m/ice-creame.webp 1x, images/hero/m/ice-creame@2x.webp 2x"
-        alt="ICEREAME"
         media="(min-width: 768px)"
         type="image/webp"
       />
       <source
         srcset="images/hero/m/ice-creame.png 1x, images/hero/m/ice-creame@2x.png 2x"
-        alt="ICEREAME"
         media="(min-width: 768px)"
         type="image/jpeg"
       />
       <source
         srcset="images/hero/s/ice-creame.webp 1x, images/hero/s/ice-creame@2x.webp 2x"
-        alt="ICEREAME"
         media="(max-width: 767px)"
         type="image/webp"
       />
       <source
         srcset="images/hero/s/ice-creame.png 1x, images/hero/s/ice-creame@2x.png 2x"
-        alt="ICEREAME"
         media="(max-width: 767px)"
         type="image/jpeg"
       />
@@ -81,25 +80,21 @@
     <picture>
       <source
         srcset="images/hero/l/milk.webp 1x, images/hero/l/milk@2x.webp 2x"
-        alt="Milk"
         media="(min-width: 1280px)"
         type="image/webp"
       />
       <source
         srcset="images/hero/l/milk.png 1x, images/hero/l/milk@2x.png 2x"
-        alt="Milk"
         media="(min-width: 1280px)"
         type="image/jpeg"
       />
       <source
         srcset="images/hero/m/milk.webp 1x, images/hero/m/milk@2x.webp 2x"
-        alt="Milk"
         media="(min-width: 768px)"
         type="image/webp"
       />
       <source
         srcset="images/hero/m/milk.png 1x, images/hero/m/milk@2x.png 2x"
-        alt="Milk"
         media="(min-width: 768px)"
         type="image/jpeg"
       />
@@ -110,25 +105,21 @@
     <picture>
       <source
         srcset="images/hero/l/girl.webp 1x, images/hero/l/girl@2x.webp 2x"
-        alt="girl"
         media="(min-width: 1280px)"
         type="image/webp"
       />
       <source
         srcset="images/hero/l/girl.png 1x, images/hero/l/girl@2x.png 2x"
-        alt="girl"
         media="(min-width: 1280px)"
         type="image/jpeg"
       />
       <source
         srcset="images/hero/m/girl.webp 1x, images/hero/m/girl@2x.webp 2x"
-        alt="girl"
         media="(min-width: 768px)"
         type="image/webp"
       />
       <source
         srcset="images/hero/m/girl.png 1x, images/hero/m/girl@2x.png 2x"
-        alt="girl"
         media="(min-width: 768px)"
         type="image/jpeg"
       />
